<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="348dp"
        android:layout_height="523dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="294dp"
                android:layout_height="match_parent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/btnClear"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnDelete"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:text="@string/btnDelete"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn8"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn8" />

            <Button
                android:id="@+id/btn9"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/btnAddition"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:text="@string/btnAddition"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn4" />

            <Button
                android:id="@+id/btn5"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn6"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btnSubstraction"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:text="@string/btnSubstraction"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn1"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn2"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn2"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn3"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnDivision"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:text="@string/btnDivision"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn0"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn0" />

            <Button
                android:id="@+id/btnDot"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnDot" />

            <Button
                android:id="@+id/btnMultiplication"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:text="@string/btnMultiplication"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCalculate"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalculate" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnHistory"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/btnHistory"
            android:textColor="@android:color/black" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>